Package_Tools/include-C/gmp/gmp.h

#define GMP_LIMB_BITS                      64
#define GMP_NAIL_BITS                      0
#define GMP_NUMB_BITS     (GMP_LIMB_BITS - GMP_NAIL_BITS)
#define GMP_NUMB_MASK     ((~ __GMP_CAST (mp_limb_t, 0)) >> GMP_NAIL_BITS)
#define GMP_NUMB_MAX      GMP_NUMB_MASK
#define GMP_NAIL_MASK     (~ GMP_NUMB_MASK)
typedef unsigned int		mp_limb_t;
typedef unsigned long long int	mp_limb_t;
typedef unsigned long int	mp_limb_t;
typedef unsigned long int	mp_bitcnt_t;
/* Available random number generation algorithms.  */
typedef enum
{
  GMP_RAND_ALG_DEFAULT = 0,
  GMP_RAND_ALG_LC = GMP_RAND_ALG_DEFAULT /* Linear congruential.  */
} gmp_randalg_t;
/* Types for function declarations in gmp files.  */
/* ??? Should not pollute user name space with these ??? */
typedef const __mpz_struct *mpz_srcptr;
typedef __gmp_randstate_struct *gmp_randstate_ptr;
typedef const __gmp_randstate_struct *gmp_randstate_srcptr;
extern const int mp_bits_per_limb;
extern  int gmp_errno;
extern const char * const gmp_version;
/**************** Random number routines.  ****************/

/* obsolete */
extern void gmp_randinit (gmp_randstate_ptr, gmp_randalg_t, ...);
extern void gmp_randinit_default (gmp_randstate_ptr);
extern void gmp_randinit_lc_2exp (gmp_randstate_ptr, mpz_srcptr, unsigned long int, mp_bitcnt_t);
extern int gmp_randinit_lc_2exp_size (gmp_randstate_ptr, mp_bitcnt_t);
extern void gmp_randinit_mt (gmp_randstate_ptr);
extern void gmp_randinit_set (gmp_randstate_ptr, gmp_randstate_srcptr);
extern void gmp_randseed (gmp_randstate_ptr, mpz_srcptr);
extern void gmp_randseed_ui (gmp_randstate_ptr, unsigned long int);
extern void gmp_randclear (gmp_randstate_ptr);
extern unsigned long gmp_urandomb_ui (gmp_randstate_ptr, unsigned long);
extern unsigned long gmp_urandomm_ui (gmp_randstate_ptr, unsigned long);
/**************** Formatted output routines.  ****************/

extern int gmp_asprintf (char **, const char *, ...);
extern int gmp_fprintf (FILE *, const char *, ...);
extern int gmp_obstack_printf (struct obstack *, const char *, ...);
extern int gmp_obstack_vprintf (struct obstack *, const char *, va_list);
extern int gmp_printf (const char *, ...);
extern int gmp_snprintf (char *, size_t, const char *, ...);
extern int gmp_sprintf (char *, const char *, ...);
extern int gmp_vasprintf (char **, const char *, va_list);
extern int gmp_vfprintf (FILE *, const char *, va_list);
extern int gmp_vprintf (const char *, va_list);
extern int gmp_vsnprintf (char *, size_t, const char *, va_list);
extern int gmp_vsprintf (char *, const char *, va_list);
/**************** Formatted input routines.  ****************/

extern int gmp_fscanf (FILE *, const char *, ...);
extern int gmp_scanf (const char *, ...);
extern int gmp_sscanf (const char *, const char *, ...);
extern int gmp_vfscanf (FILE *, const char *, va_list);
extern int gmp_vscanf (const char *, va_list);
extern int gmp_vsscanf (const char *, const char *, va_list);