Packages_2024/gmp_6.3.0/fp_gmp.pas

unit fp_gmp;

interface

const
  {$IFDEF Linux}
  libgmp = 'libgmp';
  {$ENDIF}

  {$IFDEF windows}
  libgmp = 'libgmp-10.dll';
  {$ENDIF}

  {$IFDEF FPC}
  {$PACKRECORDS C}
  {$ENDIF}

type
  {$IFDEF Linux}
  Tculong = uint64;
  Tclong = int64;
  Tlong_double = extended;
  {$ENDIF}

  {$IFDEF Windows}
  Tculong = uint32;
  Tclong = int64;
  Tlong_double = double;
  {$ENDIF}
  Pculong = ^Tculong;
  Pclong = ^Tclong;

type
  PFILE = Pointer;
  Pobstack = Pointer;
  Tva_list = Pointer; // ????

  Tsize_t = SizeInt;
  Psize_t = ^Tsize_t;

  // ptr und struc in den Bezeichnern wurde entfernt und durch Pascal taugliches T und P ersetzt.

  // =====================

type
  Tgmp_randalg_t = longint;

const
  GMP_RAND_ALG_DEFAULT = 0;
  GMP_RAND_ALG_LC = GMP_RAND_ALG_DEFAULT;

type
  Pmp_limb_t = ^Tmp_limb_t;
  Tmp_limb_t = uint64;

  Pmp_limb_signed_t = ^Tmp_limb_signed_t;
  Tmp_limb_signed_t = int64;

  Tmp_bitcnt_t = uint64;

  Pmp_size_t = ^Tmp_size_t;
  Tmp_size_t = SizeInt;

  Pmp_exp_t = ^Tmp_exp_t;
  Tmp_exp_t = SizeInt;

type
  Tmpz = record
    _mp_alloc: longint;
    _mp_size: longint;
    _mp_d: Pmp_limb_t;
  end;
  Pmpz = ^Tmpz;

  Tmpq = record
    _mp_num: Tmpz;
    _mp_den: Tmpz;
  end;
  Pmpq = ^Tmpq;

  Tmpf = record
    _mp_prec: Tclong;
    _mp_size: Tclong;
    _mp_exp: Tmp_exp_t;
    _mp_d: Pmp_limb_t;
  end;
  Pmpf = ^Tmpf;

  Tgmp_randstate = record
    _mp_seed: Tmpz;
    _mp_alg: Tgmp_randalg_t;
    _mp_algdata: record
      case longint of
        0: (_mp_lc: pointer);
      end;
  end;
  Pgmp_randstate = ^Tgmp_randstate;

const
  GMP_LIMB_BITS = 64;
  GMP_NAIL_BITS = 0;
  GMP_NUMB_BITS = GMP_LIMB_BITS - GMP_NAIL_BITS;
  GMP_NUMB_MASK = (not Tmp_limb_t(0)) shr GMP_NAIL_BITS;
  GMP_NUMB_MAX = GMP_NUMB_MASK;
  GMP_NAIL_MASK = not GMP_NUMB_MASK;

var
  __gmp_bits_per_limb: longint; cvar;external libgmp;
  mp_bits_per_limb: longint absolute __gmp_bits_per_limb;
  __gmp_errno: longint; cvar;external libgmp;
  gmp_errno: longint absolute __gmp_errno;
  __gmp_version: pchar; cvar;external libgmp;
  gmp_version: pchar absolute __gmp_version;

{*************** Random number routines.  *************** }
procedure gmp_randinit(para1: Pgmp_randstate; para2: Tgmp_randalg_t); varargs; cdecl; external libgmp name '__gmp_randinit';
procedure gmp_randinit_default(para1: Pgmp_randstate); cdecl; external libgmp name '__gmp_randinit_default';
procedure gmp_randinit_lc_2exp(para1: Pgmp_randstate; para2: Pmpz; para3: Tculong; para4: Tmp_bitcnt_t); cdecl; external libgmp name '__gmp_randinit_lc_2exp';
function gmp_randinit_lc_2exp_size(para1: Pgmp_randstate; para2: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmp_randinit_lc_2exp_size';
procedure gmp_randinit_mt(para1: Pgmp_randstate); cdecl; external libgmp name '__gmp_randinit_mt';
procedure gmp_randinit_set(para1: Pgmp_randstate; para2: Pgmp_randstate); cdecl; external libgmp name '__gmp_randinit_set';
procedure gmp_randseed(para1: Pgmp_randstate; para2: Pmpz); cdecl; external libgmp name '__gmp_randseed';
procedure gmp_randseed_ui(para1: Pgmp_randstate; para2: Tculong); cdecl; external libgmp name '__gmp_randseed_ui';
procedure gmp_randclear(para1: Pgmp_randstate); cdecl; external libgmp name '__gmp_randclear';
function gmp_urandomb_ui(para1: Pgmp_randstate; para2: Tculong): Tculong; cdecl; external libgmp name '__gmp_urandomb_ui';
function gmp_urandomm_ui(para1: Pgmp_randstate; para2: Tculong): Tculong; cdecl; external libgmp name '__gmp_urandomm_ui';

{*************** Formatted output routines.  *************** }
function gmp_asprintf(para1: PPchar; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_asprintf';
function gmp_fprintf(para1: PFILE; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_fprintf';
function gmp_obstack_printf(para1: Pobstack; para2: pchar): longint; cdecl; external libgmp name '__gmp_obstack_printf';
function gmp_obstack_vprintf(para1: Pobstack; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_obstack_vprintf';
function gmp_printf(para1: pchar): longint; varargs; cdecl; external libgmp name '__gmp_printf';
function gmp_snprintf(para1: pchar; para2: Tsize_t; para3: pchar): longint; varargs; cdecl; external libgmp name '__gmp_snprintf';
function gmp_sprintf(para1: pchar; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_sprintf';
function gmp_vasprintf(para1: PPchar; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vasprintf';
function gmp_vfprintf(para1: PFILE; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vfprintf';
function gmp_vprintf(para1: pchar; para2: Tva_list): longint; cdecl; external libgmp name '__gmp_vprintf';
function gmp_vsnprintf(para1: pchar; para2: Tsize_t; para3: pchar; para4: Tva_list): longint; cdecl; external libgmp name '__gmp_vsnprintf';
function gmp_vsprintf(para1: pchar; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vsprintf';

{*************** Formatted input routines.  *************** }
function gmp_fscanf(para1: PFILE; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_fscanf';
function gmp_scanf(para1: pchar): longint; varargs; cdecl; external libgmp name '__gmp_scanf';
function gmp_sscanf(para1: pchar; para2: pchar): longint; varargs; cdecl; external libgmp name '__gmp_sscanf';
function gmp_vfscanf(para1: PFILE; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vfscanf';
function gmp_vscanf(para1: pchar; para2: Tva_list): longint; cdecl; external libgmp name '__gmp_vscanf';
function gmp_vsscanf(para1: pchar; para2: pchar; para3: Tva_list): longint; cdecl; external libgmp name '__gmp_vsscanf';
